# 3-python-package-atajo-devs

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: Pipfile  build.yaml  build.yml
guss_game/: __init__.py  cli.py  game_data.py  guesser.py
src/: __init__.py
src/VideoGameDay/fun_fact_rand/: __init__.py  fun_facts.py  fun_facts_db.py
src/VideoGameDay/gaming_luck/: __init__.py  gaming_luck.py
src/VideoGameDay/recommend_game/: __init__.py  game_data.py  recommend_game.py
src/gaming_luck/: gaming_luck.py  luck_data.py
src/guess_game/: __init__.py
src/recommend_game/: game_data.py  recommend_game.py
tests/: test_fun_facts.py  test_gaming_luck.py  test_guess_games.py  test_recommend_game.py
